--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   li {
     border-left: 4px solid transparent;
     padding-left: 8px;
+    cursor: pointer;
   }
   li:hover {
     border-color: red;
