--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
           <li>Dadi Freyr</li>
           <li>The Japanese House</li>
           <li>Kasbo</li>
-          <li>Flōa</li>
+          <li>Flo</li>
           <li>Olivia Dean</li>
           <li>Sam Barber</li>
-          <li>Bixthplagu</li>
+          <li>Bigxthaplug</li>
           <li>Elyanna</li>
           <li>Saint Levant</li>
-          <li>Austra</li>
+          <li>Giolì & Assia</li>
           <li>Fleshwater</li>
           <li>Matt Hansen</li>
           <li>Blondshell</li>
@@ -81,46 +81,46 @@
           <li>SZA</li>
           <li>Stray Kids</li>
           <li>Laufey</li>
-          <li>Renee Rapp</li>
+          <li>Reneé Rapp</li>
           <li>Zedd</li>
           <li>Faye Webster</li>
           <li>Victoria Monét</li>
-          <li>SexyRed</li>
+          <li>Sexyy Red</li>
           <li>Galantis</li>
           <li>Loud Luxury</li>
           <li>Kevin Abstract</li>
-          <li>Naye</li>
+          <li>Raye</li>
           <li>Megan Moroney</li>
           <li>Ruel</li>
           <li>Alok</li>
-          <li>Overn</li>
-          <li>Yebba</li>
-          <li>The Knocks</li>
-          <li>Nonotak</li>
-          <li>Wilkinson</li>
+          <li>Qveen Herby</li>
+          <li>Veeze</li>
+          <li>In This Moment</li>
+          <li>Noizu</li>
+          <li>Wilderado</li>
           <li>Ryan Beatty</li>
           <li>Malcolm Todd</li>
           <li>Lola Young</li>
           <li>Militarie Gun</li>
           <li>It's Murph</li>
           <li>Geese</li>
-          <li>Blu DeTiger</li>
+          <li>Blu Detiger</li>
           <li>Wisp</li>
-          <li>VCHA</li>
+          <li>Vcha</li>
           <li>Pawpaw Rod</li>
           <li>Tiny Habits</li>
           <li>The National Parks</li>
-          <li>Unusual Demont</li>
+          <li>Twinsick</li>
           <li>Xandra</li>
-          <li>Gulfer</li>
-          <li>Asian Glow</li>
-          <li>They Hate Change</li>
-          <li>Township Rebellion</li>
+          <li>Gudfella</li>
+          <li>Sundial</li>
+          <li>Godly The Ruler</li>
+          <li>Tommy Richman</li>
           <li>Ava Maybee</li>
           <li>Mckenna Grace</li>
           <li>Cale Tyson</li>
-          <li>Kalli</li>
-          <li>FifteenEight</li>
+          <li>Kaliii</li>
+          <li>FifteenØeight</li>
           <li>Brandi Cyrus</li>
         </ul>
       </div>
@@ -129,6 +129,8 @@
         <h2>Saturday</h2>
         <ul>
           <li>The Killers</li>
+          <li>Future X</li>
+          <li>Metro Boomin</li>
           <li>Deftones</li>
           <li>Tate McRae</li>
           <li>Ive</li>
@@ -143,22 +145,23 @@
           <li>Briston Maroney</li>
           <li>Boywithuke</li>
           <li>Romy</li>
-          <li>Yasoboi</li>
+          <li>Yoasobi</li>
           <li>Josiah and the Bonnevilles</li>
           <li>Destroy Boys</li>
           <li>Leisure</li>
           <li>Eyedress</li>
           <li>Dora Jar</li>
           <li>Nia Archives</li>
-          <li>Joyryde</li>
+          <li>Jyoty</li>
           <li>Tanner Usrey</li>
           <li>Friko</li>
           <li>Quarters of Change</li>
-          <li>Aquarian White</li>
-          <li>Natalie Layne</li>
+          <li>Armani White</li>
+          <li>Natalie Jane</li>
           <li>Happy Landing</li>
-          <li>Nikita Dasha</li>
-          <li>Ahaddream</li>
+          <li>Nightly</li>
+          <li>Dasha</li>
+          <li>Ahadadream</li>
           <li>Brigitte Calls Me Baby</li>
           <li>Infinity Song</li>
           <li>Sam Nelson</li>
@@ -166,7 +169,7 @@
           <li>Hayes Warner</li>
           <li>Tommy Newport</li>
           <li>Savannah Ré</li>
-          <li>Kandra</li>
+          <li>Xandra</li>
         </ul>
       </div>
 
@@ -186,13 +189,15 @@
           <li>Whyte Fang</li>
           <li>Sir</li>
           <li>Ben Böhmer</li>
-          <li>Tezo Touchdown</li>
+          <li>Teezo Touchdown</li>
           <li>The Last Dinner Party</li>
           <li>Waterparks</li>
-          <li>Grantprenterz</li>
+          <li>Mersiv</li>
+          <li>Cults</li>
+          <li>Grentperez</li>
           <li>Good Kid</li>
-          <li>Hol</li>
-          <li>Friday</li>
+          <li>Hol!</li>
+          <li>Fridayy</li>
           <li>Slow Pulp</li>
           <li>Medium Build</li>
           <li>Mimi Webb</li>
@@ -202,7 +207,7 @@
           <li>Jessica Audiffred</li>
           <li>Nico Vega</li>
           <li>Willis</li>
-          <li>Hanabie</li>
+          <li>Hanabie.</li>
           <li>Post Sex Nachos</li>
           <li>Nostalgix</li>
           <li>Valencia Grace</li>
@@ -211,7 +216,7 @@
           <li>Kyle Dion</li>
           <li>Kaitlin Butts</li>
           <li>Ryan Trey</li>
-          <li>Harvey</li>
+          <li>Huddy</li>
           <li>Carmen Deleon</li>
           <li>Chicago Made</li>
         </ul>
@@ -219,8 +224,10 @@
 
       <!-- Skrillex as a special mention -->
       <div id="special">
-        <h2>Special Performance</h2>
-        <p>Skrillex - Saturday Night</p>
+        <h2>Special Performance - Saturday Night</h2>
+        <ul>
+          <li>Skrillex</li>
+        </ul>
       </div>
     </div>
   </main>
